--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
     "xss": "^1.0.8"
