--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "migrate": "postgrator --config postgrator-config.js"
+    "postdeploy": "npm run migrate:production",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "heroku run npm run migrate"
   },
   "keywords": [],
   "engines": {
@@ -27,6 +29,7 @@
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
+    "postgrator": "^3.2.0",
     "xss": "^1.0.8"
   },
   "devDependencies": {
