--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
+    "migrate": "^1.7.0",
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
     "postgrator": "^3.2.0",
