--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "postdeploy": "npm run migrate:production",
-    "migrate": "postgrator --config postgrator-config.js",
-    "migrate:production": "heroku run npm run migrate"
+    "postdeploy": "npm run migrate:production"
   },
   "keywords": [],
   "engines": {
@@ -29,7 +29,7 @@
     "knex": "^0.21.5",
     "migrate": "^1.7.0",
     "morgan": "^1.10.0",
-    "pg": "^7.18.2",
+    "pg": "^7.14.0",
     "postgrator": "^3.2.0",
     "xss": "^1.0.8"
   },
